--- a/study-note/java-study/some-code/src/main/resources/application.properties
+++ b/study-note/java-study/some-code/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 spring.jpa.show-sql=true
+
+
+project.upload.file-path="H://Growth-mine"
+
+
