--- a/study-note/java-study/some-code/src/main/resources/application.properties
+++ b/study-note/java-study/some-code/src/main/resources/application.properties
@@ -2,6 +2,9 @@ server.servlet.context-path=/code
 
 server.port = 8081
 
+#server.tomcat.uri-encoding=utf-8
+
+
 #MySQL¡¨Ω”≈‰÷√
 spring.datasource.url=jdbc:mysql://localhost:3306/some_code?characterEncoding=utf-8&useSSL=false&useUnicode=true&serverTimezone=UTC
 spring.datasource.username=root
@@ -13,6 +16,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 
 
-project.upload.file-path="H://Growth-mine"
+project.upload.file-path=H:\\Growth-mine\\upload
+project.template.file-path=H:\\Growth-mine\\template
 
 
