--- a/study-note/java-study/some-code/src/main/resources/application.properties
+++ b/study-note/java-study/some-code/src/main/resources/application.properties
@@ -19,4 +19,6 @@ spring.jpa.show-sql=true
 project.upload.file-path=H:\\Growth-mine\\upload
 project.template.file-path=H:\\Growth-mine\\template
 
+app.const.version=1.0
+
 
