--- a/study-note/java-study/some-code/pom.xml
+++ b/study-note/java-study/some-code/pom.xml
@@ -81,6 +81,24 @@
 			<artifactId>easyexcel</artifactId>
 			<version>2.0.0-beta1</version>
 		</dependency>
+
+		<!-- jwt处理框架-->
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version> 3.7.0</version>
+		</dependency>
+		<!--shiro权限管理框架-->
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-spring</artifactId>
+			<version> 1.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-ehcache</artifactId>
+			<version> 1.4.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
