--- a/study-note/java-study/fish-system/pom.xml
+++ b/study-note/java-study/fish-system/pom.xml
@@ -7,6 +7,7 @@
         <module>开发工具</module>
 		<module>通用组件</module>
 		<module>系统服务</module>
+		<module>系统配置</module>
 	</modules>
     <parent>
 		<groupId>org.springframework.boot</groupId>
@@ -69,11 +70,25 @@
 			<version>1.2.57</version>
 		</dependency>
 
+<!--		commons-lang3-->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.7</version>
 		</dependency>
+<!--		swagger-->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
