--- a/study-note/java-study/fish-system/系统服务/src/main/resources/application.properties
+++ b/study-note/java-study/fish-system/系统服务/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port = 8080
 server.servlet.context-path = /fish
 
-spring.datasource.url=jdbc:mysql://localhost:3306/db_fish?\
+spring.datasource.url=jdbc:mysql://localhost:3307/db_fish?\
   characterEncoding=utf-8\
   &useSSL=false\
   &useUnicode=true&\
@@ -9,3 +9,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db_fish?\
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.show-sql=true
+
+project.version=1.0
+project.basepackage=com.fish
